tests/Houtamelo.Spire.Analyzers.Tests/SPIRE022/cases/Non_Delegate_Int.cs
//@ should_fail
// SPIRE022: [Inlinable] on an int parameter

public partial class Host_022_Int
{
    public static void Call([Inlinable] int x) //~ ERROR
    {
        _ = x;
    }
}
